fix(app): Fix accidental dark mode due to some Chrome Plugins
Chrome Plugins recently introduced adding something like:

    :root {
        color-scheme: dark light !important;
    }

to all web-pages. As it seems, web-pages now should tell the outside,
that they don't support any dark/light mode by using:

    :root {
        color-scheme: normal !important;
    }

which is, what I did now.

--- a/app/sample/styles.css
+++ b/app/sample/styles.css
@@ -11,6 +11,8 @@
   --ck-sample-container-width: 1285px;
   --ck-sample-sidebar-width: 350px;
   --ck-sample-editor-min-height: 400px;
+  /* We are not ready for dark/light color-scheme support, yet. Let's tell that to the browser. */
+  color-scheme: normal !important;
 }
 
 /* --------- NOTIFICATIONS ------------------------------------------------------------------------------------------ */
